tests/parsing/smtlib/v2.6/errors/103_pop_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/103_pop_unclosed_1.smt2", line 1, character 7-8:
1 | (pop 0 _)
           ^
Error while parsing a pop command, read the reserved word '_',
      but expected a closing parenthesis.
